<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Text View strings -->
    <!-- Login Screen -->
    <string name="app_name">Matchy</string>
    <string name="loginhelptext">Log in met uw gebruikersgegevens of registreer een nieuw account op http://tiny.cc/Matchy</string>
    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>
    <string name="saveLogin">Onthoud logingegevens</string>
    
    <!-- Menu Screen -->
    <string name="login">Login</string>
    <string name="homeButton">Home</string>
    <string name="profileButton">Profiel</string>
    <string name="matchButton">Matches</string>
    <string name="searchButton">Zoeken</string>
    <string name="logoutButton">Log uit</string>
    
    <!-- Main Screen -->
    <string name="mainScreenTitle">Uw nieuwste matches!</string>
    <string name="oldMatchesTitle">Uw oude matches</string>
    <string name="seeMatches">Bekijk al uw matches</string>
    <string name="mainScreenSearch">Zoek naar uw perfecte match!</string>
    <string name="searchAdvanced">Zoek in de geadvanceerde zoekmachine</string>
    <string name="back">Terug</string>
    <string name="searchTitle">Zoek naar uw perfecte matches</string>
    <string name="searchSubTitle">Selecteer uw gewenste critiria en klik op \'Zoeken\'</string>
    <string name="spinnerTemplate">--Selecteer uw branch--</string>

    <!-- Content Descriptions -->
    <string name="CDescLogo">Logo Matchy</string>
    <string name="title_activity_call_soap">CallSoapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- JavaCode Strings -->
    <string name="_errorConnection">Fout met verbinden naar de server, probeer het later nog eens</string>
    <string name="_falseLogin">Foutieve inloggegevens ingevoerd, probeer opnieuw</string>
</resources>
