<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/back_icon"
        android:contentDescription="@string/back" />

    <LinearLayout
        android:id="@+id/navigationLayout"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/backButton"
        android:gravity="center" >

        <Button
            android:id="@+id/homeButton"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/left_menu_button"
            android:text="@string/homeButton"
            android:gravity="center"
            android:padding="0dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:padding="0dp"
            android:background="@drawable/mid_menu_button"
            android:text="@string/profileButton"
            android:textSize="12sp" />

        <Button
            android:id="@+id/matchButton"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:padding="0dp"
            android:background="@drawable/mid_menu_button"
            android:text="@string/matchButton"
            android:textSize="12sp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:padding="0dp"
            android:background="@drawable/mid_menu_button"
            android:text="@string/searchButton"
            android:textSize="12sp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:padding="0dp"
            android:background="@drawable/right_menu_button"
            android:text="@string/logoutButton"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/bannerTop"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/navigationLayout"
        android:src="@drawable/mid_menu_button" />
</RelativeLayout>
