<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity" >

    <include
        android:id="@+id/layoutNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/navigation_menu_layout" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/layoutNavigation" >

        <RelativeLayout
            android:id="@+id/mainScreenWrapper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/mainScreenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/mainScreenTitle"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/newMatches"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_below="@+id/mainScreenTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_view_profile_style" >
            </ListView>

            <Button
                android:id="@+id/seeMatchesButton"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_below="@+id/newMatches"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/mid_menu_button"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/seeMatches"
                android:textSize="10sp" />

            <View
                android:id="@+id/separatorMainScreen"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/seeMatchesButton"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/mainScreenSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/separatorMainScreen"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/mainScreenSearch"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/searchCompany"
                android:layout_width="175dp"
                android:layout_height="30dp"
                android:layout_below="@id/mainScreenSearch"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_view_profile_style"
                android:inputType="textVisiblePassword"
                android:textSize="10sp" />

            <Spinner
                android:id="@+id/branchSpinner"
                android:layout_width="175dp"
                android:layout_height="30dp"
                android:layout_below="@id/searchCompany"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_view_profile_style" />

            <ImageView
                android:id="@+id/searchImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/branchSpinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/search_icon" />

            <TextView
                android:id="@+id/of"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/searchImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="OF"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/searchAdvanced"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@id/seeMatchesButton"
                android:layout_below="@id/of"
                android:layout_marginTop="7dp"
                android:background="@drawable/mid_menu_button"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/searchAdvanced"
                android:textSize="10sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>